# HasChor

./: CITATION.cff  Dockerfile  HasChor.cabal  LICENSE  README.md  cabal.project
.github/workflows/: doc.yml  static.yml
app/: Main.hs  NetworkTest.hs
app/bank-2pc/: Main.hs
app/bookseller/: Main.hs
app/diffiehellman/: Main.hs
app/kvs/: Main.hs
app/kvs-1-simple/: Main.hs
app/kvs-2-primary-backup/: Main.hs
app/kvs-3-hoc/: Main.hs
app/kvs-4-location-polymorphism/: Main.hs
app/kvs-chain/: Main.hs
app/kvs-primary-backup/: Main.hs
app/mergesort/: Main.hs
examples/: HasChor-examples.cabal
examples/async/: Main.hs
examples/bank-2pc/: Main.hs  README.md
examples/bookseller/: Main.hs  README.md
examples/bookseller-0-network/: Main.hs  README.md
examples/bookseller-1-simple/: Main.hs  README.md
examples/bookseller-2-higher-order/: Main.hs  README.md
examples/bookseller-3-loc-poly/: Main.hs  README.md
examples/bookseller-higher-order/: Main.hs
examples/diffiehellman/: Main.hs  README.md
examples/karatsuba/: Main.hs  README.md  Reference.hs
examples/kvs-1-simple/: Main.hs  README.md
examples/kvs-2-primary-backup/: Main.hs  README.md
examples/kvs-3-higher-order/: Main.hs  README.md
examples/kvs-3-hoc/: Main.hs
examples/kvs-4-loc-poly/: Main.hs  README.md
examples/kvs-4-location-polymorphism/: Main.hs
examples/mergesort/: Main.hs  README.md
examples/playground/: Main.hs  README.md
examples/quicksort/: Main.hs  README.md  Reference.hs
examples/ring-leader/: Main.hs  README.md
src/: Choreography.hs  ChoreographyAsync.hs
src/Choreography/: Choreo.hs  ChoreoAsync.hs  ChoreoNew.hs  ChoreoOoO.hs  Control.hs  Local.hs  Located.hs  Location.hs  Macro.hs  Network.hs  NetworkAsync.hs  Process.hs
src/Choreography/Network/: Http.hs  Local.hs
src/Choreography/NetworkAsync/: Http.hs
src/Control/Concurrent/: Future.hs
src/Control/Monad/: AppMon.hs  Async.hs  Freer.hs
tests/: Main.hs
tests/async/: Main.hs
tests/choreo/: Main.hs
