cabal-version:      2.4
name:               HasChor
version:            0.1.0.1
synopsis:           Functional choreographic programming in Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         Gan Shen <gan_shen@icloud.com>
copyright:          (c) Gan Shen 2022
category:           Concurrency
description:
    HasChor is a library for functional choreographic programming in Haskell.
    See the README.md for more information.

tested-with:
    GHC == 9.6.3
    GHC == 9.4.7
    GHC == 9.2.8

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/gshen42/HasChor

source-repository this
    type:     git
    location: https://github.com/gshen42/HasChor
    tag:      v0.1.0.1

library
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
        Choreography
        ChoreographyAsync
        Choreography.Choreo
        Choreography.ChoreoAsync
        Choreography.Location
        Choreography.Network
        Choreography.Network.Http
        Choreography.Network.Local
        Choreography.NetworkAsync
        Choreography.NetworkAsync.Http
        Control.Monad.Freer
    build-depends:
        , async                >= 2.2  && < 2.3
        , base                 >= 4.16 && < 4.20
        , bytestring           >= 0.11 && < 0.13
        , http-client          >= 0.7  && < 0.8
        , mtl                  >= 2.2  && < 2.4
        , servant              >= 0.19 && < 0.21
        , servant-client       >= 0.19 && < 0.21
        , servant-server       >= 0.19 && < 0.21
        , template-haskell     >= 2.18 && < 2.22
        , unordered-containers >= 0.2  && < 0.3
        , warp                 >= 3.3  && < 3.4
