cabal-version:      3.0
name:               HasChor
version:            0.2.0.0
synopsis:           Functional choreographic programming in Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         Gan Shen <gan_shen@icloud.com>
copyright:          (c) Gan Shen 2024
category:           Concurrency
description:
    HasChor is a library for functional choreographic programming in Haskell.
    See the README.md for more information.

tested-with:
    GHC == 9.4.8

extra-doc-files:
    README.md

source-repository head
    type:     git
    location: https://github.com/gshen42/HasChor

source-repository this
    type:     git
    location: https://github.com/gshen42/HasChor
    tag:      v0.2.0.0

library
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
        Choreography
        Choreography.Choreo
        Choreography.Location
        Choreography.Network
        Choreography.Network.Http
--        Choreography.Network.Local
        Control.Monad.Freer
    build-depends:
        , async
        , base
        , bytestring
        , http-client
        , mtl
        , servant
        , servant-client
        , servant-server
        , transformers
        , unordered-containers
        , warp

executable tests
    hs-source-dirs:   tests
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async
        , base
        , stm
