cabal-version:      3.0
name:               HasChor-examples
version:            0.2.0.0
synopsis:           Examples for using the HasChor library

executable async
    hs-source-dirs:   async
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async   >= 2.2  && < 2.3
        , base    >= 4.16 && < 4.20

executable bank-2pc
    hs-source-dirs:   bank-2pc
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , split   >= 0.2  && < 0.3
        , time    >= 1.11 && < 1.13

executable bookseller-0-network
    hs-source-dirs:   bookseller-0-network
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-1-simple
    hs-source-dirs:   bookseller-1-simple
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-2-higher-order
    hs-source-dirs:   bookseller-2-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable bookseller-3-loc-poly
    hs-source-dirs:   bookseller-3-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , time    >= 1.11 && < 1.13

executable diffiehellman
    hs-source-dirs:   diffiehellman
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base    >= 4.16 && < 4.20
        , random  >= 1.2  && < 1.3
        , time    >= 1.11 && < 1.13

executable karatsuba
    hs-source-dirs:   karatsuba
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async      >= 2.2  && < 2.3
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7

executable kvs1
    hs-source-dirs:   kvs-1-simple
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs2
    hs-source-dirs:   kvs-2-primary-backup
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs3
    hs-source-dirs:   kvs-3-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable kvs4
    hs-source-dirs:   kvs-4-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable mergesort
    hs-source-dirs:   mergesort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable quicksort
    hs-source-dirs:   quicksort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , async      >= 2.2  && < 2.3
        , base       >= 4.16 && < 4.20
        , containers >= 0.6  && < 0.7
        , time       >= 1.11 && < 1.13

executable ring-leader
    hs-source-dirs:   ring-leader
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base         >= 4.16 && < 4.20
        , transformers >= 0.5  && < 0.7

executable playground
    hs-source-dirs:   playground
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        , HasChor
        , base         >= 4.16 && < 4.20
